fixed centering text on some project pages on mobile added more images to rocket page added image to proxy page

--- a/public/styles.css
+++ b/public/styles.css
@@ -420,6 +420,7 @@
   
     .about {
       align-items: center;
+      text-align: center;
       margin-top: 2em;
     }
   
